--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ env:
   GO_VERSION: 1.18
 
 jobs:
-  lint:
+  ci:
     name: lint
     runs-on: ubuntu-latest
     steps:
@@ -29,3 +29,6 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: latest
+
+      - name: test
+        run: go test -v ./...
